# noscrum

./: .dockerignore  .env  .eslintrc.js  .gitignore  .pre-commit-config.yaml  .requirements.txt.un~  LICENSE  README.md  bower.json  flake.nix  gulpfile.babel.js  gulpfile.js  industrial-systems-NoScrum-0.0.2-resolved.yaml  package.json  pylint_output.txt  pyproject.toml  requirements.txt  requirements.txt~  testing.db
.devcontainer/: Dockerfile  devcontainer.json
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: feature_request.md
.github/workflows/: codeql-analysis.yml  pylint.yml
css/: style.css
jsx/: README.md  app.jsx  epic.jsx  index.js  index.jsx  scheduling_modal.jsx  sprint_showcase.jsx  story.jsx  task.jsx  task_showcase.jsx
noscrum/: __init__.py  db.py  epic.py  extract.py  main.py  model.py  noscrum.sqlite  requirements.txt  schema.sql  search.py  semi_static.py  setup.cfg  sprint.py  story.py  tag.py  task.py  user.py  work.py
noscrum/noscrum_api/: __init__.py  config.py  epic.py  search.py  semi_static.py  sprint.py  story.py  tag.py  task.py  template_friendly.py  user.py  work.py
noscrum/noscrum_backend/: auth.py  config.py  db.py  db_instance.py  epic.py  extract.py  sprint.py  story.py  tag.py  task.py  user.py  work.py
noscrum/static/: style.css
noscrum/static/js/: app.js
noscrum/templates/: base.html  index.html
noscrum/templates/epic/: list.html  show.html
noscrum/templates/search/: results.html
noscrum/templates/sprint/: board.html  create.html  list.html
noscrum/templates/story/: show.html
noscrum/templates/tag/: create.html  list.html  show.html
noscrum/templates/task/: create.html  list.html
noscrum/templates/user/: create.html  login.html  profile.html
noscrum/templates/work/: list.html  read_del.html  report.html
notscrum/: __init__.py  epic.py  schema.sql  search.py  sprint.py  story.py  tag.py  task.py  work.py
notscrum/templates/: base.html  index.html
notscrum/templates/epic/: create.html  list.html
notscrum/templates/sprint/: board.html  board.html.bak  list.html
notscrum/templates/story/: create.html  list.html  tag.html
notscrum/templates/tag/: show.html
notscrum/templates/task/: list.html  list_old.html  show.html
notscrum/templates/work/: create.html  list.html
static/: style.css
static/examples/: jqueryui.html
static/js/: app.js
templates/: base.html  index.html
templates/epic/: create.html  list.html  show.html
templates/epic/fragments/: epic.html  list_epic.html
templates/search/: results.html
templates/sprint/: board.html  create.html  list.html
templates/story/: create.html  list.html  show.html  tag.html
templates/story/fragments/: create.html  list.html  list_story.html
templates/tag/: create.html  list.html  show.html
templates/task/: create.html  list.html  show.html
templates/task/fragments/: create.html  list.html  list_task.html
templates/user/: create.html  login.html  profile.html
templates/users/: login.html  register.html  settings.html
templates/work/: create.html  list.html  read_del.html  report.html
tests/: flask_user_test.py  test_base.py  test_epic.py  test_openapi.py  test_playwright.py  test_story.py
