[project]
name = "noscrum"
version = "0.1.0"
description = "It's Not Scrum"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "babel==2.10.3",
    "bcrypt==4.0.0",
    "click==8.1.3",
    "colorama==0.4.5",
    "dotenv>=0.9.9",
    "fastapi>=0.86.0",
    "flask<=2.1.2",
    "flask-babelex==0.9.4",
    "flask-foundation==2.1",
    "flask-login==0.6.2",
    "flask-openapi3==1.1.3",
    "flask-sqlalchemy>=2.5.1",
    "importlib-metadata==4.12.0",
    "itsdangerous==2.1.2",
    "jinja2==3.1.2",
    "markupsafe==2.1.1",
    "pre-commit>=4.5.1",
    "pydantic==1.9.0",
    "pyjwt==2.4.0",
    "python-dotenv==0.20.0",
    "pytz==2022.2.1",
    "speaklater==1.3",
    "sqlalchemy==2.0.0",
    "starlette==0.20.4",
    "typing-extensions==4.3.0",
    "zipp==3.8.1",
]

[dependency-groups]
dev = [
    "isort>=8.0.1",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
managed = true

[tool.ruff]
exclude = [
    ".git",
    "__pypache__",
    ".venv",
    ".pytest_cache"
]
line-length = 101

[tool.isort]
profile = "black"

[tool.hatch.build.targets.wheel]
packages = ["noscrum"]

[tool.pyright]
venvPath = "."
venv = ".venv"

[tool.pytest.ini_options]
testpaths=["tests"]
