[project]
name = "noscrum"
version = "0.1.0"
description = "It's Not Scrum"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.22.1",
    "babel==2.10.3",
    "bcrypt>=4.0.0",
    "colorama==0.4.5",
    "dotenv>=0.9.9",
    "fastapi-users[sqlalchemy]>=15.0.4",
    "fastapi[standard]>=0.135",
    "itsdangerous>=2.1.2",
    "jinja2>=3.1.2",
    "pydantic",
    "pyjwt>=2.4.0",
    "python-dotenv>=0.20.0",
    "pytz>=2022.2.1",
    "speaklater==1.3",
    "sqlalchemy>=2.0.0",
    "sqlmodel>=0.0.36",
    "zipp==3.8.1",
]

[dependency-groups]
dev = [
    "isort>=8.0.1",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
managed = true

[tool.ruff]
exclude = [
    ".git",
    "__pypache__",
    ".venv",
    ".pytest_cache"
]
line-length = 101

[tool.isort]
profile = "black"

[tool.hatch.build.targets.wheel]
packages = ["noscrum"]

[tool.pyright]
venvPath = "."
venv = ".venv"

[tool.pytest.ini_options]
testpaths=["tests"]
