[project]
name = "noscrum"
version = "0.1.0"
description = "Don't do Scrum. Individual project management for abnormal people."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "bcrypt>=3.2.0",
    "flask>=3.0.0",
    #    "flask-babelex>=0.9.4",
    "flask-foundation==2.1",
    "flask-login>=0.6.3",
    "flask-mail>=0.9.1",
    "flask-openapi3>=1.1.5",
    "flask-sqlalchemy>=3.0",
    "flask-wtf>=1.0.0",
    "pyjwt==2.4.0",
    "python-dotenv==0.19.2",
    "sqlalchemy>=1.4",
    "starlette>=0.52.1",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "coverage==5.0.3",
    "flask-testing>=0.8.1",
    "isort>=8.0.1",
    "ruff>=0.15.5",
]
