[metadata]
name = noscrum
version = 0.2
author = Jason Schlesinger
license = MIT
classifiers =
    Topic :: Internet
    Topic :: Internet :: API
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10


[options]
install_requires =
    Flask==2.1.2
    werkzeug==2.1.2
    Flask-Login>=0.5.0
    Flask-BabelEx>=0.9.4
    flask-openapi3==1.1.3
    Flask-SQLAlchemy==2.5.1
    Flask-Foundation==2.1
    python-dotenv>=0.20.0
    bcrypt==4.0.0
    pydantic==1.9.0
    starlette==0.20.4
    SQLAlchemy==1.3.20
    PyJWT==2.4.0
python_requires = >=3.7
package_dir =
    =.
zip_safe = no
